docker img fixes

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,8 +1,8 @@
 FROM openjdk:17-alpine
-COPY ./target/beholder-0.1.0-SNAPSHOT-standalone.jar /home/beholder-0.1.0-SNAPSHOT-standalone.jar
+COPY ./target/*-standalone.jar /home/beholder-standalone.jar
 ENTRYPOINT java \
 -Des-hosts=http://host.minikube.internal:9200 \
 -Dk8s-apiserver=https://kubernetes.default.svc \
 -Dk8s-token=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token) \
 -server \
--jar /home/beholder-0.1.0-SNAPSHOT-standalone.jar
+-jar /home/beholder-standalone.jar
